@@ -44,7 +44,7 @@ public class PathParametersTest
                .addWebResource("faces-config.xml")
                .addWebResource("pretty-config.xml")
                .addLibrary(MavenArtifactResolver.resolve(
-                        "com.ocpsoft:prettyfaces-jsf2:3.2.1-SNAPSHOT"))
+                        "com.ocpsoft:prettyfaces-jsf2:3.3.0-SNAPSHOT"))
                .setWebXML("jsf-web.xml");
    }
 
