@@ -1,0 +1,14 @@
+<pretty-config xmlns="http://ocpsoft.com/prettyfaces/3.2.1"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://ocpsoft.com/prettyfaces/3.2.1
+                                   		http://ocpsoft.com/xml/ns/prettyfaces/ocpsoft-pretty-faces-3.2.1.xsd">
+
+   <url-mapping id="foo">
+      <pattern value="/foo" />
+      <view-id>/index.jsf</view-id>
+   </url-mapping>
+   <url-mapping id="bar">
+      <pattern value="/bar" />
+      <view-id>/index.jsf</view-id>
+   </url-mapping>
+</pretty-config>
