@@ -1,0 +1,16 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+   xmlns:h="http://java.sun.com/jsf/html"
+   xmlns:f="http://java.sun.com/jsf/core">
+   <head>
+      <title>Sample JSF Page</title>
+   </head>
+   <body>
+    <h1>Hi There</h1>
+
+   	<h:link id="foo" outcome="pretty:foo" value="foo" />
+   	<h:link id="bar" outcome="pretty:bar" value="bar"/>
+
+   </body>
+</html>
